[tool.poetry]
name = "go-get-jobs"
version = "0.1.0"
description = ""
authors = ["Erik Kristofer Anderson <erik.kristofer.anderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.5.0"
sendgrid = "^6.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
